# labelisation_app

./: .gitignore  Cargo.toml  README.md  transfer_data.sh
src/: csv_row_processor.rs  lib.rs  main.rs  regex_sets.rs  rules.json  tmp.py
src/.data/: new_df_usable_profiteroles.back.back.back.csv  new_df_usable_profiteroles.back.back.csv  new_df_usable_profiteroles.back.csv  new_df_usable_profiteroles.csv  sampling.csv  to_label_part2_bis.csv
tests/: regex_detections_test.rs  rules_parser_test.rs
