[package]
name = "labelisation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
colored = "2.0"
serde_json = "1.0.99"
serde = { version = "1.0", features = ["derive"] }
chrono="0.4"
ctrlc = "3.1.5"
